test/integration/bad/lang/bad_lpdf.stan
functions {
  real my_dist_lpdf(){
    return 1.0;
  }
}
